[fix]#18089 ellipsis nav links and align icons

--- a/css/modules/_navigations.scss
+++ b/css/modules/_navigations.scss
@@ -172,8 +172,7 @@ nav.vertical,
             a {
                 @include run-transition(background);
                 margin-left: 0;
-                padding-left: 25px;
-                padding-right: 45px;
+                padding-left: 25px;                
                 i.arrow {
                     position: absolute;
                     height: 20px;
@@ -196,15 +195,7 @@ nav.vertical,
                     margin-left: 5px;
                     text-indent: 8px;
                 }
-                i.close,
-                i.edit {
-                    position: absolute;
-                    right: 5px;
-                    top: 1px;
-                }
-                i.edit {
-                    right: 30px;
-                }
+
             }
             a.selected {
                 color: $accent;
